Added new steps to css @media to improve page resizing layout. Fixed a typo in MDR-1000X repair page. Added hidden test page.

--- a/public/404.html
+++ b/public/404.html
@@ -170,7 +170,7 @@
 	<h1>Error</h1>
 	<p>
 	</p>
-	<p>Woops. Looks like this page doesn&#39;t exist.</p>
+	<p>Looks like this page doesn&#39;t exist.</p>
 	<p></p>
 	<p><a href="http://jachandler.com/">Go to homepage</a></p>
 	 
@@ -188,7 +188,7 @@
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -222,7 +222,7 @@ this.page.url = 'http:\/\/jachandler.com\/404.html';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
