--- a/public/_footer/index.html
+++ b/public/_footer/index.html
@@ -184,7 +184,7 @@
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -218,7 +218,7 @@ this.page.url = 'http:\/\/jachandler.com\/_footer';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
