--- a/public/about-the-site/building/index.html
+++ b/public/about-the-site/building/index.html
@@ -216,7 +216,7 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -250,7 +250,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site\/building';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -260,7 +260,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site\/building';
 
   
     <div class="date">
-        ©2018 Jonathan Chandler. Last update on September 16, 2018. 
+        ©2018 Jonathan Chandler. Published September 16, 2018. 
     </div>
     
 
