--- a/public/about-the-site/index.html
+++ b/public/about-the-site/index.html
@@ -208,7 +208,7 @@ role="alert">This section details the making of this website. Hopefully it can b
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -242,7 +242,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -252,7 +252,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site';
 
   
     <div class="date">
-        ©2018 Jonathan Chandler. Last update on September 7, 2018. 
+        ©2018 Jonathan Chandler. Published September 7, 2018. 
     </div>
     
 
