--- a/public/about-the-site/s3-request-security/index.html
+++ b/public/about-the-site/s3-request-security/index.html
@@ -243,7 +243,7 @@ def lambda_handler(event, context):
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -277,7 +277,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site\/s3-request-security';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -287,7 +287,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site\/s3-request-security';
 
   
     <div class="date">
-        ©2018 Jonathan Chandler. Last update on November 22, 2018. 
+        ©2018 Jonathan Chandler. Published November 22, 2018. 
     </div>
     
 
