--- a/public/projects/audio-measurement-rig/index.html
+++ b/public/projects/audio-measurement-rig/index.html
@@ -239,7 +239,7 @@ A rudimentary CSD measured on the Retro by TOHRU. Decay appears well-behaved. Th
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -273,7 +273,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/audio-measurement-rig';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -283,7 +283,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/audio-measurement-rig';
 
   
     <div class="date">
-        ©2019 Jonathan Chandler. Last update on January 23, 2019. 
+        ©2019 Jonathan Chandler. Published January 23, 2019. 
     </div>
     
 
