--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -213,7 +213,7 @@ role="alert">As of now I only have a handful of projects documented on this site
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -247,7 +247,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -257,7 +257,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects';
 
   
     <div class="date">
-        ©2018 Jonathan Chandler. Last update on September 3, 2018. 
+        ©2018 Jonathan Chandler. Published September 3, 2018. 
     </div>
     
 
