--- a/public/projects/microphone-preamp/index.html
+++ b/public/projects/microphone-preamp/index.html
@@ -249,7 +249,7 @@ PCB layout, sans ground and power planes for clarity.</p>
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -283,7 +283,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/microphone-preamp';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -293,7 +293,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/microphone-preamp';
 
   
     <div class="date">
-        ©2019 Jonathan Chandler. Last update on January 23, 2019. 
+        ©2019 Jonathan Chandler. Published January 23, 2019. 
     </div>
     
 
