--- a/public/projects/sony-mdr-1000x-repair/index.html
+++ b/public/projects/sony-mdr-1000x-repair/index.html
@@ -326,7 +326,7 @@
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -360,7 +360,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/sony-mdr-1000x-repair';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -370,7 +370,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/sony-mdr-1000x-repair';
 
   
     <div class="date">
-        ©2019 Jonathan Chandler. Last update on January 16, 2019. 
+        ©2019 Jonathan Chandler. Published January 16, 2019. 
     </div>
     
 
