--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
 
 <footer>
 <hr>
-
+<center>
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -229,7 +229,7 @@ this.page.url = 'http:\/\/jachandler.com';
 };
 </script>
 </div></div>
-
+</center>
 <br>
 
 <div class="footline">
@@ -239,7 +239,7 @@ this.page.url = 'http:\/\/jachandler.com';
 
   
     <div class="date">
-        ©2018 Jonathan Chandler. Last update on September 6, 2018. 
+        ©2018 Jonathan Chandler. Published September 6, 2018. 
     </div>
     
 
