Hid test folder from sidebar.

--- a/public/projects/sony-mdr-1000x-repair/index.html
+++ b/public/projects/sony-mdr-1000x-repair/index.html
@@ -62,6 +62,14 @@
             <i class="fa fa-fw fa-home"></i>
           </a>
           </li>
+    <li data-nav-id="/test/" class="dd-item haschildren
+        ">
+      <div>
+      <a href="/test/">Tests</a><i class="fa fa-angle-right fa-lg category-icon"></i><i class="fa fa-circle-thin read-icon"></i>
+      </div>
+        <ul>
+        </ul>
+    </li>
     <li data-nav-id="/about-the-site/" class="dd-item alwaysopen haschildren
         ">
       <div>
@@ -143,6 +151,8 @@
       <center>Navigation : 
         <select onchange="javascript:location.href = this.value;">
           
+    <option value="/test/" >
+   Tests</option>
     <option value="/about-the-site/" >
    About The Site</option> 
       <option value="/about-the-site/hosting/" >- Hosting</option>
@@ -193,7 +203,7 @@
 
 <p>The Brainwavz HM5 is considered by many to be one of the most comfortable pair of closed-back cans out there<sup class="footnote-ref" id="fnref:2"><a href="#fn:2">2</a></sup>, with its luxuriously deep pads and reasonably clamping headband. In other words, its parts are the perfect candidates for improvements to the MDR-1000X. And thankfully, they can be purchased seperately fairly easily.</p>
 
-<p>I bought an <a href="https://www.sonicelectronix.com/item_112155_NVX-XPT100HB.html">NVX XPT100 replacement headband</a>for $20<sup class="footnote-ref" id="fnref:3"><a href="#fn:3">3</a></sup> and <a href="https://www.aliexpress.com/item/1-Pair-Replacement-Memory-Foam-Ear-Cushions-Earpads-Cusion-Covers-for-Sony-HM5-Large-Over-head/32865781395.html">replacement earpads</a> for $3<sup class="footnote-ref" id="fnref:4"><a href="#fn:4">4</a></sup>. My original intent was to mount the MDR-1000X&rsquo;s cups on the new headband and route the internal cable along the inside of the new headband. As it turned out, however, removing the entire original headband is easier said than done.</p>
+<p>I bought an <a href="https://www.sonicelectronix.com/item_112155_NVX-XPT100HB.html">NVX XPT100 replacement headband</a> for $20<sup class="footnote-ref" id="fnref:3"><a href="#fn:3">3</a></sup> and <a href="https://www.aliexpress.com/item/1-Pair-Replacement-Memory-Foam-Ear-Cushions-Earpads-Cusion-Covers-for-Sony-HM5-Large-Over-head/32865781395.html">replacement earpads</a> for $3<sup class="footnote-ref" id="fnref:4"><a href="#fn:4">4</a></sup>. My original intent was to mount the MDR-1000X&rsquo;s cups on the new headband and route the internal cable along the inside of the new headband. As it turned out, however, removing the entire original headband is easier said than done.</p>
 
 
 <figure >
@@ -326,7 +336,7 @@
 
 <footer>
 <hr>
-<center>
+
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -360,7 +370,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/sony-mdr-1000x-repair';
 };
 </script>
 </div></div>
-</center>
+
 <br>
 
 <div class="footline">
