--- a/public/about-the-site/hosting/index.html
+++ b/public/about-the-site/hosting/index.html
@@ -62,6 +62,14 @@
             <i class="fa fa-fw fa-home"></i>
           </a>
           </li>
+    <li data-nav-id="/test/" class="dd-item haschildren
+        ">
+      <div>
+      <a href="/test/">Tests</a><i class="fa fa-angle-right fa-lg category-icon"></i><i class="fa fa-circle-thin read-icon"></i>
+      </div>
+        <ul>
+        </ul>
+    </li>
     <li data-nav-id="/about-the-site/" class="dd-item parent alwaysopen haschildren
         ">
       <div>
@@ -143,6 +151,8 @@
       <center>Navigation : 
         <select onchange="javascript:location.href = this.value;">
           
+    <option value="/test/" >
+   Tests</option>
     <option value="/about-the-site/" >
    About The Site</option> 
       <option value="/about-the-site/hosting/"  selected>- Hosting</option>
@@ -216,7 +226,7 @@ role="alert"> Previously the site was hosted across a number of providers to max
 
 <footer>
 <hr>
-<center>
+
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -250,7 +260,7 @@ this.page.url = 'http:\/\/jachandler.com\/about-the-site\/hosting';
 };
 </script>
 </div></div>
-</center>
+
 <br>
 
 <div class="footline">
