--- a/public/projects/das-model-s-mac-restoration/index.html
+++ b/public/projects/das-model-s-mac-restoration/index.html
@@ -62,6 +62,14 @@
             <i class="fa fa-fw fa-home"></i>
           </a>
           </li>
+    <li data-nav-id="/test/" class="dd-item haschildren
+        ">
+      <div>
+      <a href="/test/">Tests</a><i class="fa fa-angle-right fa-lg category-icon"></i><i class="fa fa-circle-thin read-icon"></i>
+      </div>
+        <ul>
+        </ul>
+    </li>
     <li data-nav-id="/about-the-site/" class="dd-item alwaysopen haschildren
         ">
       <div>
@@ -143,6 +151,8 @@
       <center>Navigation : 
         <select onchange="javascript:location.href = this.value;">
           
+    <option value="/test/" >
+   Tests</option>
     <option value="/about-the-site/" >
    About The Site</option> 
       <option value="/about-the-site/hosting/" >- Hosting</option>
@@ -374,7 +384,7 @@ role="alert"> I found a Das Model S keyboard in bad shape at the campus surplus 
 
 <footer>
 <hr>
-<center>
+
 <div class="comments"><script>
 $(function(){
 $('#show-comments').on('click', function(){
@@ -408,7 +418,7 @@ this.page.url = 'http:\/\/jachandler.com\/projects\/das-model-s-mac-restoration'
 };
 </script>
 </div></div>
-</center>
+
 <br>
 
 <div class="footline">
